[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "parse_broken_json"
packages = ["parse_broken_json"]

[project]
name = "parse_broken_json"
version = "0.2"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Library to help parsing broken and invalid JSON."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT License"}
keywords = ["parsing", "broken", "json", "invalid"]
readme = "README.md"
dependencies=[
    "ijson",
]

[project.urls]
repository = "https://github.com/carlosplanchon/parse_broken_json.git"
